--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Calculator</title>
 </head>
 <body>
+<div class="calculator">
+    <div class="display">
+        0
+    </div>
+    <div class="buttons">
+        <button>AC</button>
+        <button>±</button>
+        <button>%</button>
+        <button>÷</button>
 
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>×</button>
+
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>−</button>
+
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+
+        <button>0</button>
+        <button>.</button>
+        <button>=</button>
+    </div>
+</div>
 </body>
 </html>
