--- a/index.html
+++ b/index.html
@@ -4,6 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #000;
+            font-family: Arial, sans-serif;
+        }
+
+        .calculator {
+            width: calc(64px * 4 + 12px * 3);
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+        }
+
+        .display {
+            padding: 0 12px;
+            font-size: 72px;
+            color: white;
+            text-align: right;
+            display: flex;
+            flex-direction: row-reverse;
+        }
+
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 12px;
+        }
+
+        button {
+            font-family: Arial, sans-serif;
+            font-size: 32px;
+            aspect-ratio: 1;
+            padding: 0;
+            border: none;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body>
 <div class="calculator">
