Step 4: Add CSS classes to the buttons

--- a/index.html
+++ b/index.html
@@ -54,29 +54,29 @@
         0
     </div>
     <div class="buttons">
-        <button>AC</button>
-        <button>±</button>
-        <button>%</button>
-        <button>÷</button>
+        <button class="special clear">AC</button>
+        <button class="special plusminus">±</button>
+        <button class="special percent">%</button>
+        <button class="operation divide">÷</button>
 
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>×</button>
+        <button class="number b7">7</button>
+        <button class="number b8">8</button>
+        <button class="number b9">9</button>
+        <button class="operation multiply">×</button>
 
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>−</button>
+        <button class="number b4">4</button>
+        <button class="number b5">5</button>
+        <button class="number b6">6</button>
+        <button class="operation subtract">−</button>
 
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
+        <button class="number b1">1</button>
+        <button class="number b2">2</button>
+        <button class="number b3">3</button>
+        <button class="operation add">+</button>
 
-        <button>0</button>
-        <button>.</button>
-        <button>=</button>
+        <button class="number b0">0</button>
+        <button class="number point">.</button>
+        <button class="operation equal">=</button>
     </div>
 </div>
 </body>
