Step 8: Improve accessibility of the plus/minus buttons

--- a/index.html
+++ b/index.html
@@ -143,29 +143,31 @@
         0
     </div>
     <div class="buttons">
-        <button class="special clear">AC</button>
-        <button class="special plusminus">%</button>
-        <button class="special percent">%</button>
-        <button class="operation divide">÷</button>
+        <button class="special clear" aria-label="Clear">AC</button>
+        <button class="special plusminus" aria-label="Negate the displayed value">
+            <span aria-hidden="true">%</span>
+        </button>
+        <button class="special percent" aria-label="Percent">%</button>
+        <button class="operation divide" aria-label="Divide">÷</button>
 
         <button class="number b7">7</button>
         <button class="number b8">8</button>
         <button class="number b9">9</button>
-        <button class="operation multiply">×</button>
+        <button class="operation multiply" aria-label="Multiply">×</button>
 
         <button class="number b4">4</button>
         <button class="number b5">5</button>
         <button class="number b6">6</button>
-        <button class="operation subtract">−</button>
+        <button class="operation subtract" aria-label="Subtract">−</button>
 
         <button class="number b1">1</button>
         <button class="number b2">2</button>
         <button class="number b3">3</button>
-        <button class="operation add">+</button>
+        <button class="operation add" aria-label="Add">+</button>
 
         <button class="number b0">0</button>
-        <button class="number point">.</button>
-        <button class="operation equal">=</button>
+        <button class="number point" aria-label="Decimal point">.</button>
+        <button class="operation equal" aria-label="Equal">=</button>
     </div>
 </div>
 </body>
