--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
     </style>
 
     <script>
+        const HYPHEN = '-';
+        const MINUS = '−';
+
         document.addEventListener('DOMContentLoaded', () => {
             let display, type, operator, operand, result, previousType, savedOperand;
 
@@ -181,6 +184,26 @@
                 updateControls();
             }
 
+            function pressPlusMinus() {
+                if (display === '0') {
+                    return;
+                }
+
+                if (display.startsWith(HYPHEN)) {
+                    display = display.substring(1);
+                } else {
+                    display = HYPHEN + display;
+                }
+
+                if (type === 'operation') {
+                    operand = -operand;
+                } else if (type === 'equal') {
+                    result = -result;
+                }
+
+                updateControls();
+            }
+
             function calculate() {
                 if (operator) {
                     switch (operator) {
@@ -219,12 +242,17 @@
                 updateControls();
             }
 
+            function formatDisplay(value) {
+                // Replace hyphen-minus with real minus sign.
+                return value.replace(HYPHEN, MINUS);
+            }
+
             function updateControls() {
                 const hasInput = result || operand || type === 'number';
                 document.querySelector('.clear').innerText = hasInput ? 'C' : 'AC';
                 document.querySelector('.clear').ariaLabel = hasInput ? 'Clear' : 'Clear all';
 
-                document.querySelector('.display').innerText = display;
+                document.querySelector('.display').innerText = formatDisplay(display);
 
                 document.querySelectorAll('.operation').forEach((button) => {
                     button.classList.remove('active');
@@ -252,6 +280,10 @@
 
             document.querySelector(".clear").addEventListener('click', () => {
                 clearAll();
+            });
+
+            document.querySelector(".plusminus").addEventListener('click', () => {
+                pressPlusMinus();
             });
         });
     </script>
