--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 if (type === 'number') {
                     if (result) {
                         const base = operator ? result : operand;
-                        display = (base / 100 * parseFloat(display)).toString();
+                        display = roundResult(base / 100 * parseFloat(display));
                     } else {
-                        display = (parseFloat(display) / 100).toString();
+                        display = roundResult(parseFloat(display) / 100);
                     }
                 }
 
@@ -252,7 +252,7 @@
                     result = operand;
                 }
 
-                display = result.toString();
+                display = roundResult(result);
             }
 
             function pressEqual() {
@@ -268,6 +268,13 @@
                 type = 'equal';
                 calculate();
                 updateControls();
+            }
+
+            function roundResult(value) {
+                if (Number.isInteger(value)) {
+                    return value.toString();
+                }
+                return value.toFixed(10).replace(/\.?0+$/, '');
             }
 
             function formatDisplay(value) {
