Step 24: Fix iOS Safari bug with the viewport height, scrolling, and touch events

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            min-height: 100dvh;
             background-color: #000;
             font-family: Arial, sans-serif;
+            touch-action: none;
 
             @media (max-width: 645px) {
                 align-items: end;
@@ -439,6 +440,10 @@
             window.addEventListener('resize', rescale);
             rescale();
         });
+
+        // iOS Safari hack to show CSS :active state on touch events:
+        // See https://stackoverflow.com/questions/3885018
+        document.addEventListener("touchstart", function() {}, false);
     </script>
 </head>
 <body>
